db setup update

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,6 +1,6 @@
 version: "2"
 sql:
-  - schema: "sql/schema"
+  - schema: "supabase/migrations"
     queries: "sql/queries"
     engine: "postgresql"
     gen:
